@@ -1,3 +1,10 @@
+2014-05-20  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* include/functions_api.php
+	  include/functions_db.php
+	  include/functions_incidents.php: Fixed API:
+	function 'get_stats'.
+
 2014-05-15  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* include/languages/cs.mo
